welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:7: error: ';' expected but 'if' found.
} if (nbBaggles>2)
  ^Poucet:9: error: ';' expected but 'else' found.
	else
        ^